# privatevault-deploy

./: .env.example  .gitignore  AGENT_FIREWALL_README.md  DESIGN_PRINCIPLES.md  Dockerfile.sandbox  LICENSE  README.md  README_NEW.md  SECURITY.md  agent_executor_firewalled.py  ai_firewall_core.py  allow_weather_viewer.sh  attack_test.py  attack_test_v2.py  audits.worm  battle_cards.md  clean_action_signal.sh  clean_admin_override.sh  cleanup_all_patches.sh  cleanup_indent.sh  control_plane.py  correct_admin_override.sh  decision_ledger.py  demo_firewall.py  docker-compose.monitoring.yml  docker-compose.sandbox.yml  docker-compose.vault.yml  docker-compose.yml  ec2 stop-instances \  execute_and_log.py  find_role_bug.sh  fix_admin_fallback.sh  fix_admin_final_override.sh  fix_admin_override_scope.sh  fix_anomaly.sh  fix_role_mapping.sh  fix_role_mapping_real.sh  fix_timezone.sh  fix_tool_firewall_bug.sh  fix_viewer_policy.sh  (+38 more)
agents/: crime_agent.py  finance_agent.py  malicious_agent.py  risk_agent.py  system_agent.py  weather_agent.py
cli/: pv.py
coordination/: collusion_simulation.py  multi_agent_chaos.py
demos/: production_deployment_without_privatevault.py  treasury_payment_without_privatevault.py
die/: __init__.py
docs/: ARCHITECTURE.md  authority-model.md  multi-agent-governance.md  replay-model.md  runtime-flow.md
examples/: demo_firewall_real.py  sovereign_final_test.py
privatevault/: __init__.py  runtime.py
pv_cognition/: __init__.py  cognition_snapshot.py  intent_drift_detector.py  pre_execution_cognitive_validator.py  reasoning_chain_verifier.py
(+216 files in other folders)
